--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'//2、Greendao插件
 
 android {
     compileSdkVersion 28
@@ -18,7 +19,23 @@ android {
         }
     }
 }
-
+//3、Greendao存放目录
+greendao {
+    schemaVersion 1 //数据库版本号
+    daoPackage 'com.bw.movie.database' //设置时生成代码的目录
+    targetGenDir 'src/main/java' //设置DaoMaster、DaoSession、Dao目录
+}
+//解决导完依赖版本号报红问题
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '28.0.0'
+            }
+        }
+    }
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -26,4 +43,55 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //Gson解析
+    implementation 'com.google.code.gson:gson:2.7'
+    //Glide图片
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    //Glide的transformation库  支持圆角
+    implementation 'jp.wasabeef:glide-transformations:4.1.0'
+    //TabLayout（版本号要和SDK版本一致）
+    implementation 'com.android.support:design:28.0.0'
+    //Banner（轮播图）
+    implementation 'com.youth.banner:banner:1.4.9'
+    //Volley
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
+    //RecyclerView（版本号要和SDK版本一致）
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //XRecyclerView（版本号要和SDK版本一致）允许刷新加载
+    implementation 'com.jcodecraeer:xrecyclerview:1.2.6'
+    //流式布局
+    implementation 'com.google.android:flexbox:1.0.0'
+    //二维码CodeUtils.createImage
+    implementation 'cn.yipianfengye.android:zxing-library:2.2'
+    //Butterknife
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    //Butterknife注释处理器
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    //okhttp
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    //ok日志拦截器 需要使用日志拦截器的时候使用
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    //EventBus
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    //Retrofit2.0
+    implementation 'com.squareup.retrofit2:retrofit:+'
+    //让Retrofit2.0支持Gson自动解析json
+    implementation 'com.squareup.retrofit2:converter-gson:+'
+    //Rxjava2
+    implementation 'io.reactivex.rxjava2:rxjava:+'
+    //Rxandroid
+    implementation 'io.reactivex.rxjava2:rxandroid:+'
+    //让retrofit支持Rxjava2
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:+'
+    //Takephoto相册选择器
+    implementation 'org.devio.takephoto:takephoto_library:4.1.0'
+
+    //快速适配器
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+
+    //GreenDao
+    implementation 'org.greenrobot:greendao:3.2.2'
+
+
 }
